# unityped-parser

./: Class.hs  Parser.hs  README.md  RecursionSchemes.hs  Test.hs  TestBetter.hs  TestObj.hs  Value.hs  unityped-parser.cabal
Control/: Parsing.hs  UnitypedParser.hs
Control/Monad/: UnitypedParser.hs
Control/Monad/UnitypedParser/: Better.hs  Monad.hs  Parser.hs  Pretty.hs
Control/UnitypedParser/: Better.hs  Monad.hs  Parser.hs  Pretty.hs
Data/: JsonObject.hs  Object.hs  TomlObject.hs  Unityped.hs
Data/Object/: Combinators.hs  JsonObject.hs  Parse.hs  Types.hs
Data/Unityped/: Better.hs  Class.hs  Getters.hs  Value.hs
