name:                unityped-parser
version:             0.0.6
synopsis:            Parser from unityped representation to Haskell data structures
-- description:
license:             PublicDomain
author:              Eugene Smolanka
maintainer:          esmolanka@gmail.com
-- copyright:
category:            Codec
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  exposed-modules:
    Control.UnitypedParser.Better
    Control.UnitypedParser.Monad
    Control.UnitypedParser.Parser
    Control.UnitypedParser.Pretty
    Control.UnitypedParser
    Data.Unityped.Better
    Data.Unityped.Class
    Data.Unityped.Getters
    Data.Unityped.Value
    Data.Unityped
    Control.Parsing
    Data.Object.Combinators
    Data.Object.JsonObject
    Data.Object.Parse
    Data.Object.Types
    Data.Object

  -- other-extensions:
  build-depends:       base >=4.7 && <4.8, mtl, ansi-wl-pprint, containers, transformers, free, recursion-schemes, scientific
  -- hs-source-dirs:
  default-language:    Haskell2010

executable TestUnitypedParser
  main-is:             Test.hs
  ghc-options:         -main-is Test
  build-depends:       base >=4.7 && <4.8, mtl, ansi-wl-pprint, containers, transformers, free, recursion-schemes, unityped-parser
  default-language:    Haskell2010

executable TestUnitypedParserBetter
  main-is:             TestBetter.hs
  ghc-options:         -main-is TestBetter
  build-depends:       base >=4.7 && <4.8, mtl, ansi-wl-pprint, containers, transformers, free, recursion-schemes, unityped-parser, scientific, process
  default-language:    Haskell2010

executable TestUnitypedParserObj
  main-is:             TestObj.hs
  ghc-options:         -main-is TestObj
  build-depends:       base >=4.7 && <4.8, mtl, ansi-wl-pprint, containers, transformers, free, recursion-schemes, unityped-parser, scientific, process
  default-language:    Haskell2010
